[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/icon buttons/round icons/ERASE.png" type="Texture" id=1]
[ext_resource path="res://assets/icon buttons/round icons/EDIT.png" type="Texture" id=2]
[ext_resource path="res://assets/Rubik-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/PresetItem.gd" type="Script" id=4]
[ext_resource path="res://assets/icon buttons/round icons/empty.png" type="Texture" id=5]
[ext_resource path="res://src/ButtonsStyles/LineEditTexturesmall.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/OpenArrow-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/tahomabd.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://addons/arabic-text/ALabel.gd" type="Script" id=9]
[ext_resource path="res://assets/audio.svg" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )
fallback/0 = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 48
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Preset" type="Control" groups=["Preset"]]
anchor_right = 1.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 94 )
rect_clip_content = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InQueue" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preset" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -22.0
rect_min_size = Vector2( 0, 80 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Queue" type="TextureButton" parent="Preset"]
margin_right = 126.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Preset/Queue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetName" type="Label" parent="Preset"]
margin_left = 142.0
margin_top = 10.0
margin_right = 777.0
margin_bottom = 69.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Name"
autowrap = true
script = ExtResource( 9 )
hebrew_input = "Name"

[node name="Audio" type="TextureRect" parent="Preset/PresetName"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -59.0
rect_min_size = Vector2( 59, 0 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sets" type="LineEdit" parent="Preset" groups=["EmitChangesOnPads"]]
margin_left = 793.0
margin_right = 937.0
margin_bottom = 80.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
align = 1
max_length = 2
expand_to_text_length = true
virtual_keyboard_enabled = false
placeholder_text = "1"
placeholder_alpha = 0.9

[node name="Edit" type="TextureButton" parent="Preset"]
visible = false
margin_left = 845.0
margin_right = 954.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Delete" type="TextureButton" parent="Preset"]
margin_left = 953.0
margin_right = 1080.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Preset/Queue" to="." method="_on_Queue_pressed"]
[connection signal="gui_input" from="Preset/PresetName" to="." method="_on_PresetName_gui_input"]
[connection signal="text_changed" from="Preset/Sets" to="." method="_on_Sets_text_changed"]
[connection signal="pressed" from="Preset/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="Preset/Delete" to="." method="_on_Delete_pressed"]
